syntax = "proto3";

package com.statix.weathurber;

enum Conditions {
 UNKNOWN = 0;
 RAINY = 1;
 CLOUDY = 2;
 CLEAR = 3;
 SNOW = 4;
 OVERCAST = 5;
 STORM = 6;
 HAZE = 7;
 SMOKE = 8;
}

message OneDayForecast {
  double low_temp = 1;
  double high_temp = 2;
  // rain, sunny, cloudy, etc.
  Conditions condition = 3;
  int64 time = 4;
  int64 sunrise = 5;
  int64 sunset = 6;
  double rain = 7;
}

message HourlyWeather {
  double temp = 1;
  double feels_like = 2;
  Conditions condition = 3;
  int64 time = 4;
}

message ReverseGeocode {
  string name = 1;
  string country = 2;
  string state = 3;
}

message WeatherAlert {
  string sender = 1;
  string description = 2;
  int64 start = 3;
  int64 end = 4;
}

message Minutely {
  int64 time = 1;
  double rain = 2;
}

message WeatherInfo {
  HourlyWeather current_weather = 1;
  repeated OneDayForecast forecasts = 2;
  repeated HourlyWeather hour_forecasts = 3;
  string aqi = 4;
  float wind_speed = 5;
  string weather_alerts = 6 [deprecated = true];
  ReverseGeocode geocode = 7;
  repeated WeatherAlert alerts = 8;
  repeated Minutely minutely_rain = 9;
}